# michelangelo

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  UPGRADING.md  buf.yaml  cliff.toml
bazel/rules/proto/: BUILD.bazel
go/base/revision/: BUILD.bazel  helpers.go  helpers_test.go  interface.go  manager.go  manager_test.go  revision_manager.go  revision_manager_test.go  source.go
go/cascadedelete/: BUILD.bazel  apihook.go  apihook_test.go  drain.go  drain_test.go  metrics.go  metrics_test.go  ownerref.go  ownerref_test.go  retain.go  retain_test.go
go/cmd/apiserver/: BUILD.bazel  README.md  main.go  providers.go
go/cmd/controllermgr/: BUILD.bazel  README.md  cascade_retain_test.go  main.go
go/cmd/controllermgr/config/: base.yaml
go/cmd/worker/: BUILD.bazel  README.md  main.go
go/cmd/worker/config/: base.yaml
go/components/common/routing/: BUILD.bazel  interface.go
go/components/deployment/: BUILD.bazel  controller.go
go/components/inferenceserver/: BUILD.bazel  module.go
go/components/inferenceserver/backends/: interface.go  triton.go
go/components/inferenceserver/clientfactory/: BUILD.bazel  factory.go  interface.go  module.go
go/components/inferenceserver/endpoints/: BUILD.bazel  interface.go  module.go  publisher.go  publisher_test.go
go/components/ingester/: BUILD.bazel  cascade_test.go  controller.go  controller_test.go  module.go
go/components/jobs/client/: BUILD.bazel  client.go  client_test.go  module.go
go/components/lanerun/: BUILD.bazel  config.go  controller.go  module.go
go/components/pipelinerun/: BUILD.bazel  cascade_test.go  controller.go  controller_test.go  module.go
go/components/pipelinerun/actors/: BUILD.bazel  executeworkflow.go  executeworkflow_test.go
go/components/pipelinerun/apihook/: BUILD.bazel  apihook.go
go/components/pipelinerun/notification/: BUILD.bazel  module.go  notifier.go  notifier_test.go
go/components/spark/job/: BUILD.bazel  controller.go  controller_test.go  interface.go
go/components/triggerrun/: BUILD.bazel  backfill_trigger.go  backfill_trigger_test.go  cascade_test.go  controller.go  controller_test.go  cron_trigger.go  cron_trigger_test.go  runner.go  util.go
go/components/triggerrun/apihook/: BUILD.bazel  apihook.go
go/controllermgr/: BUILD.bazel  module.go  reflector_monitor.go  reflector_monitor_test.go
go/kubeproto/conversion/: BUILD.bazel  version_conversion.go  version_conversion_test.go
go/storage/mysql/: BUILD.bazel  mysql.go  mysql_integration_test.go  mysql_test.go
go/worker/activities/: BUILD.bazel  module.go
go/worker/activities/notification/: BUILD.bazel  activities.go  activities_test.go
go/worker/activities/trigger/: trigger_activities.go
go/worker/workflows/: BUILD.bazel  module.go
go/worker/workflows/notification/: BUILD.bazel  module.go  sinks.go  testing.go  workflows.go  workflows_test.go
go/worker/workflows/trigger/: BUILD.bazel  cron_trigger_workflows.go  cron_trigger_workflows_test.go
proto/api/v2/: BUILD.bazel  chart.proto  conditions.proto  evaluation_report.proto  evaluation_report_svc.proto  inference_server.proto  lane_run.proto  lane_run_svc.proto  notification.proto  pipeline.proto  pipeline_run.proto  ray_cluster.proto  revision.proto  time.proto  trigger_run.proto
python/: README.md  pyproject.toml
python/examples/: Dockerfile  README.md  entrypoint.sh
python/examples/bert_cola/: bert_cola.py
python/examples/california_housing_xgb/: README.md  __init__.py  california_housing_xgb.py  feature_prep.py  pipeline.yaml  preprocess.py  push.py  train.py
python/examples/california_housing_xgb/.docker/: Dockerfile
python/examples/config/: project.yaml
python/examples/foundation_model/: README.md  config.py  test_model.py  workflow.py
python/examples/foundation_model/tasks/: __init__.py  native_transform_task.py  train_task.py
python/examples/hello_world/: README.md  hello_world.py  pipeline.yaml  pipelinerun.yaml
python/examples/hello_world/.docker/: Dockerfile  rebuild_tar.py
python/examples/movielens/: README.md  __init__.py  data.py  model.py  train.py
python/examples/pipelines/: __init__.py
python/examples/pipelines/california_housing_xgb/: DEMO_SCRIPT.md  README.md  RUNBOOK.md  boston_housing_ray_only.py  california_housing_xgb.py  feature_prep.py  pipeline.yaml  pipelinerun.yaml  preprocess.py  push.py  register_tar.py  train.py
python/examples/pipelines/pitstop_advisor/: README.md  __init__.py  deployment.yaml  generate_data.py  inferenceserver.yaml  lanerun-example.yaml  model.py  pipeline.yaml  pipelinerun.yaml  pitstop_advisor.py  promote_revision.sh  revision.yaml  train.py
python/examples/workflow_patterns/: README.md  __init__.py  workflow_patterns.py
python/michelangelo/: __init__.py  __init___test.py  _nightly_warning.py
python/michelangelo/api/v2/: client.py
python/michelangelo/cli/mactl/: apply_hooks.py  apply_hooks_test.py  config.py  config_test.py  crd.py  crd_test.py  mactl.py  mactl_test.py
python/michelangelo/cli/sandbox/: README.md  sandbox.py
python/michelangelo/lib/: exceptions.py
python/michelangelo/lib/_internal/: errors.py  numpy_utils.py
python/michelangelo/lib/artifact_manager/: __init__.py  minio_backend.py  storage_backend.py
python/michelangelo/lib/constants/: __init__.py  sentinel.py
python/michelangelo/lib/foundation_model/: __init__.py
python/michelangelo/lib/model_manager/: __init__.py
python/michelangelo/lib/native_transform/: __init__.py  runner.py  transforms.py
python/michelangelo/lib/sequence/: __init__.py
python/michelangelo/uniflow/core/: build.py  ref.py
python/michelangelo/uniflow/plugins/: __init__.py
python/michelangelo/workflow/schema/: __init__.py  data_sink.py  exceptions.py  pusher.py  ray_data_io.py  tabular_trainer.py
python/michelangelo/workflow/tasks/: __init__.py
python/michelangelo/workflow/variables/: __init__.py  dataset.py  metadata.py  types.py
python/tests/: test_nightly_warning.py
python/tests/cli/sandbox/: test_sandbox.py
python/tests/examples/pitstop_advisor/: test_generate_data.py  (+1 more)
(+714 files in other folders)
