load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "config.go",
        "module.go",
        "reflector_monitor.go",
    ],
    importpath = "github.com/michelangelo-ai/michelangelo/go/controllermgr",
    visibility = ["//visibility:public"],
    deps = [
        "//go/base/blobstore:go_default_library",
        "//go/base/blobstore/minio:go_default_library",
        "//go/kubeproto/metrics:go_default_library",
        "@com_github_go_logr_logr//:go_default_library",
        "@com_github_uber_go_tally//:go_default_library",
        "@io_k8s_apimachinery//pkg/api/errors:go_default_library",
        "@io_k8s_apimachinery//pkg/runtime:go_default_library",
        "@io_k8s_client_go//dynamic:go_default_library",
        "@io_k8s_client_go//tools/cache:go_default_library",
        "@io_k8s_sigs_controller_runtime//:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/cache:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/client:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/manager:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/metrics/server:go_default_library",
        "@org_uber_go_config//:go_default_library",
        "@org_uber_go_fx//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["reflector_monitor_test.go"],
    embed = [":go_default_library"],
    deps = [
        "@com_github_go_logr_logr//testr:go_default_library",
        "@com_github_prometheus_client_golang//prometheus:go_default_library",
    ],
)
