load("@io_bazel_rules_go//proto:compiler.bzl", "go_proto_compiler")
load(
    "@io_bazel_rules_go//proto/wkt:well_known_types.bzl",
    "GOGO_WELL_KNOWN_TYPE_REMAPS",
    "WELL_KNOWN_TYPE_RULES",
)

go_proto_compiler(
    name = "go_yarpc",
    plugin = "@org_uber_go_yarpc//encoding/protobuf/protoc-gen-yarpc-go",
    suffix = ".pb.yarpc.go",
    valid_archive = False,
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_gogo_protobuf//jsonpb:go_default_library",
        "@com_github_gogo_protobuf//proto:go_default_library",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@org_uber_go_fx//:go_default_library",
        "@org_uber_go_yarpc//:go_default_library",
        "@org_uber_go_yarpc//api/transport:go_default_library",
        "@org_uber_go_yarpc//api/x/restriction:go_default_library",
        "@org_uber_go_yarpc//encoding/protobuf:go_default_library",
        "@org_uber_go_yarpc//encoding/protobuf/reflection:go_default_library",
    ],
)

# This protobuf compiler generates go code for k8s CRDs defined in protobuf files
go_proto_compiler(
    name = "go_kubeproto",
    options = GOGO_WELL_KNOWN_TYPE_REMAPS,
    plugin = "//go/cmd/kubeproto/protoc-gen-kubeproto:protoc-gen-kubeproto",
    visibility = ["//visibility:public"],
    deps = [
        "//go/api:go_default_library",
        "//go/kubeproto/metrics:go_default_library",
        "//go/kubeproto/util:go_default_library",
        "//go/storage:go_default_library",
        "@com_github_gogo_protobuf//gogoproto:go_default_library",
        "@com_github_gogo_protobuf//jsonpb:go_default_library",
        "@com_github_gogo_protobuf//proto:go_default_library",
        "@com_github_gogo_protobuf//sortkeys:go_default_library",
        "@com_github_gogo_protobuf//types:go_default_library",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/runtime:go_default_library",
        "@io_k8s_apimachinery//pkg/runtime/schema:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/log:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/scheme:go_default_library",
    ] + WELL_KNOWN_TYPE_RULES.values(),
)

# Generates bi-directional conversion functions between hub/spoke versions.
go_proto_compiler(
    name = "go_kubeconversion",
    options = GOGO_WELL_KNOWN_TYPE_REMAPS,
    plugin = "//go/cmd/kubeproto/protoc-gen-kubeconversion:protoc-gen-kubeconversion",
    suffix = ".conversion.pb.go",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_gogo_protobuf//proto:go_default_library",
        "@io_k8s_apimachinery//pkg/conversion:go_default_library",
        "@io_k8s_apimachinery//pkg/runtime:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/conversion:go_default_library",
        "@org_golang_google_protobuf//types/descriptorpb:go_default_library",
        "@org_golang_google_protobuf//types/pluginpb:go_default_library",
    ],
)

# generates gRPC service code (e.g. CRUD functions) for k8s CRDs defined in protobuf files
go_proto_compiler(
    name = "go_kubeyarpc",
    plugin = "//go/cmd/kubeproto/protoc-gen-kubeyarpc:protoc-gen-kubeyarpc",
    suffix = ".pb.kubeyarpc.go",
    visibility = ["//visibility:public"],
    deps = [
        "//go/api:go_default_library",
        "//go/auth:go_default_library",
        "//go/logging:go_default_library",
        "@com_github_uber_go_tally//:go_default_library",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/runtime:go_default_library",
        "@io_k8s_apimachinery//pkg/runtime/schema:go_default_library",
        "@io_k8s_apimachinery//pkg/runtime/serializer:go_default_library",
        "@io_k8s_client_go//kubernetes/scheme:go_default_library",
        "@io_k8s_client_go//rest:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/scheme:go_default_library",
        "@org_uber_go_fx//:go_default_library",
        "@org_uber_go_zap//:go_default_library",
    ] + WELL_KNOWN_TYPE_RULES.values(),
)

# This "compiler" records protoc requests in go files for proto compiler unit tests
go_proto_compiler(
    name = "go_kubeproto_unittest",
    options = GOGO_WELL_KNOWN_TYPE_REMAPS,
    plugin = "//go/cmd/kubeproto/protoc-gen-unittest:protoc-gen-unittest",
    suffix = ".pb.record.go",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_gogo_protobuf//gogoproto:go_default_library",
        "@com_github_gogo_protobuf//proto:go_default_library",
        "@com_github_gogo_protobuf//protoc-gen-gogo/descriptor:go_default_library",
        "@com_github_gogo_protobuf//sortkeys:go_default_library",
        "@com_github_gogo_protobuf//types:go_default_library",
    ] + WELL_KNOWN_TYPE_RULES.values(),
)

# Generate go validation code based on the validation rules defined in the protobuf files
go_proto_compiler(
    name = "go_validation",
    plugin = "//go/cmd/kubeproto/protoc-gen-validation:protoc-gen-validation",
    suffix = ".pb.validation.go",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_google_uuid//:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_google_grpc//status:go_default_library",
    ] + WELL_KNOWN_TYPE_RULES.values(),
)
