load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")
load("@rules_oci//oci:defs.bzl", "oci_image")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")

go_library(
    name = "go_default_library",
    srcs = [
        "config.go",
        "main.go",
        "yarpc.go",
    ],
    importpath = "github.com/michelangelo-ai/michelangelo/go/cmd/apiserver",
    visibility = ["//visibility:private"],
    deps = [
        "//go/api/crd:go_default_library",
        "//go/api/handler:go_default_library",
        "//go/auth:go_default_library",
        "//go/base/config:go_default_library",
        "//go/base/env:go_default_library",
        "//go/base/zapfx:go_default_library",
        "//go/components/project/apihook:go_default_library",
        "//go/logging:go_default_library",
        "//proto/api/v2:go_default_library",
        "@com_github_uber_go_tally//:go_default_library",
        "@io_k8s_apimachinery//pkg/runtime:go_default_library",
        "@io_k8s_client_go//kubernetes/scheme:go_default_library",
        "@org_uber_go_config//:go_default_library",
        "@org_uber_go_fx//:go_default_library",
        "@org_uber_go_yarpc//:go_default_library",
        "@org_uber_go_yarpc//api/transport:go_default_library",
        "@org_uber_go_yarpc//encoding/protobuf/reflection:go_default_library",
        "@org_uber_go_yarpc//transport/grpc:go_default_library",
        "@org_uber_go_yarpc//x/reflection:go_default_library",
        "@org_uber_go_zap//:go_default_library",
    ],
)

go_binary(
    name = "apiserver",
    data = ["config"],
    embed = [":go_default_library"],
    env = {
        "CONFIG_DIR": "$(location :config)",
    },
    gc_linkopts = select({
        "@io_bazel_rules_go//go/platform:linux": [
            # The following GC options instruct Bazel to build a static binary for running the service in a static
            # Distroless container. https://github.com/GoogleContainerTools/distroless
            "-linkmode",
            "external",
            "-extldflags",
            "-static",
        ],
        "//conditions:default": [],
    }),
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = [
        "config_test.go",
        "main_test.go",
        "yarpc_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//proto/api/v2:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
        "@org_uber_go_config//:go_default_library",
        "@org_uber_go_fx//:go_default_library",
        "@org_uber_go_fx//fxtest:go_default_library",
        "@org_uber_go_yarpc//api/transport:go_default_library",
        "@org_uber_go_yarpc//encoding/protobuf/reflection:go_default_library",
        "@org_uber_go_zap//:go_default_library",
    ],
)

pkg_tar(
    name = "tar",
    srcs = [":apiserver"],
    files = {file: file for file in glob(["config/*.yaml"])},
)

oci_image(
    name = "image",
    base = "@distroless_base",
    entrypoint = ["/apiserver"],
    tars = [":tar"],
)
