load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@rules_oci//oci:defs.bzl", "oci_image")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")

go_library(
    name = "go_default_library",
    srcs = [
        "ingester_providers.go",
        "main.go",
    ],
    importpath = "github.com/michelangelo-ai/michelangelo/go/cmd/controllermgr",
    visibility = ["//visibility:private"],
    deps = [
        "//go/api/handler:go_default_library",
        "//go/base/config:go_default_library",
        "//go/base/env:go_default_library",
        "//go/base/workflowclient:go_default_library",
        "//go/base/zapfx:go_default_library",
        "//go/components/common/routing/gatewayapi:go_default_library",
        "//go/components/deployment:go_default_library",
        "//go/components/deployment/plugins/oss:go_default_library",
        "//go/components/inferenceserver:go_default_library",
        "//go/components/inferenceserver/backends:go_default_library",
        "//go/components/inferenceserver/modelconfig:go_default_library",
        "//go/components/inferenceserver/plugins/oss:go_default_library",
        "//go/components/ingester:go_default_library",
        "//go/components/jobs/client:go_default_library",
        "//go/components/jobs/cluster:go_default_library",
        "//go/components/jobs/scheduler:go_default_library",
        "//go/components/pipeline:go_default_library",
        "//go/components/pipelinerun:go_default_library",
        "//go/components/ray:go_default_library",
        "//go/components/spark:go_default_library",
        "//go/components/triggerrun:go_default_library",
        "//go/controllermgr:go_default_library",
        "//go/kubeproto/metrics:go_default_library",
        "//go/storage:go_default_library",
        "//go/storage/mysql:go_default_library",
        "//proto/api/v2:go_default_library",
        "@com_github_go_logr_logr//:go_default_library",
        "@com_github_go_logr_zapr//:go_default_library",
        "@com_github_uber_go_tally//:go_default_library",
        "@io_k8s_apimachinery//pkg/runtime:go_default_library",
        "@io_k8s_client_go//kubernetes/scheme:go_default_library",
        "@io_k8s_sigs_controller_runtime//:go_default_library",
        "@org_uber_go_fx//:go_default_library",
    ],
)

go_binary(
    name = "controllermgr",
    data = ["config"],
    embed = [":go_default_library"],
    env = {
        "CONFIG_DIR": "$(location :config)",
    },
    gc_linkopts = select({
        "@io_bazel_rules_go//go/platform:linux": [
            # The following GC options instruct Bazel to build a static binary for running the service in a static
            # Distroless container. https://github.com/GoogleContainerTools/distroless
            "-linkmode",
            "external",
            "-extldflags",
            "-static",
        ],
        "//conditions:default": [],
    }),
    visibility = ["//visibility:public"],
)

pkg_tar(
    name = "tar",
    srcs = [":controllermgr"],
    files = {file: file for file in glob(["config/*.yaml"])},
)

oci_image(
    name = "image",
    base = "@distroless_base",
    entrypoint = ["/controllermgr"],
    tars = [":tar"],
)
