load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@rules_oci//oci:defs.bzl", "oci_image")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/michelangelo-ai/michelangelo/go/cmd/worker",
    visibility = ["//visibility:private"],
    deps = [
        "//go/base/config:go_default_library",
        "//go/base/env:go_default_library",
        "//go/base/zapfx:go_default_library",
        "//go/worker:go_default_library",
        "//go/worker/activities/notification:go_default_library",
        "//go/worker/activities/ray:go_default_library",
        "//go/worker/activities/spark:go_default_library",
        "//go/worker/plugins/ray:go_default_library",
        "//go/worker/plugins/spark:go_default_library",
        "//go/worker/workflows/notification:go_default_library",
        "@com_github_cadence_workflow_starlark_worker//service:go_default_library",
        "@com_github_cadence_workflow_starlark_worker//worker:go_default_library",
        "@org_uber_go_fx//:go_default_library",
        "@org_uber_go_zap//:go_default_library",
    ],
)

go_binary(
    name = "worker",
    data = ["config"],
    embed = [":go_default_library"],
    env = {
        "CONFIG_DIR": "$(location :config)",
    },
    gc_linkopts = select({
        "@io_bazel_rules_go//go/platform:linux": [
            # The following GC options instruct Bazel to build a static binary for running the service in a static
            # Distroless container. https://github.com/GoogleContainerTools/distroless
            "-linkmode",
            "external",
            "-extldflags",
            "-static",
        ],
        "//conditions:default": [],
    }),
    visibility = ["//visibility:public"],
)

pkg_tar(
    name = "tar",
    srcs = [":worker"],
    files = {file: file for file in glob(["config/*.yaml"])},
)

oci_image(
    name = "image",
    base = "@distroless_base",
    entrypoint = ["/worker"],
    tars = [":tar"],
)
