load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "constants.go",
        "controller.go",
        "module.go",
    ],
    importpath = "github.com/michelangelo-ai/michelangelo/go/components/inferenceserver",
    visibility = ["//visibility:public"],
    deps = [
        "//go/api:go_default_library",
        "//go/api/handler:go_default_library",
        "//go/api/utils:go_default_library",
        "//go/base/conditions/engine:go_default_library",
        "//go/base/conditions/interfaces:go_default_library",
        "//go/components/inferenceserver/clientfactory:go_default_library",
        "//go/components/inferenceserver/plugins:go_default_library",
        "//proto/api/v2:go_default_library",
        "@io_k8s_api//core/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
        "@io_k8s_client_go//tools/record:go_default_library",
        "@io_k8s_sigs_controller_runtime//:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/controller:go_default_library",
        "@org_uber_go_fx//:go_default_library",
        "@org_uber_go_zap//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["controller_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//go/api/handler:go_default_library",
        "//go/base/conditions/interfaces:go_default_library",
        "//go/base/conditions/interfaces/interfaces_mock:go_default_library",
        "//go/components/inferenceserver/plugins:go_default_library",
        "//proto/api:go_default_library",
        "//proto/api/v2:go_default_library",
        "@com_github_golang_mock//gomock:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/runtime:go_default_library",
        "@io_k8s_client_go//tools/record:go_default_library",
        "@io_k8s_sigs_controller_runtime//:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/client:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/client/fake:go_default_library",
        "@org_uber_go_zap//:go_default_library",
    ],
)
